# hey_jeep

./: demo_vad.py  hey_jeep.tflite  pyproject.toml  record_clips.py
